# my-first-actix-web

./: .gitignore  Cargo.toml  README.md  db
client/http-server/: .gitignore  Cargo.toml  README.md
client/http-server/src/: main.rs  tasks.rs  who.rs
client/rust-bin/: Cargo.toml  README.md  build.rs
client/rust-bin/src/: client.rs
grpc-server/: Cargo.toml  README.md  build.rs
grpc-server/src/: client.rs
http-server/src/: database.rs
migrations/2023-07-02-093634_create_tasks/: up.sql
proto/: my_first_tonic.proto
server/: Cargo.toml  README.md  build.rs
server/src/: server.rs
src/: database.rs  main.rs  schema.rs  tasks.rs
