[package]
edition = "2021"
name = "my-first-actix-web"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = {version = "2.1.0", features = ["sqlite", "r2d2"]}
serde = {version = "1.0.164", features = ["derive"]}
