[package]
edition = "2021"
name = "grpc-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[dependencies]
prost = "0.11"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.9"

[build-dependencies]
tonic-build = "0.9"
